--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Build outputs
 *.exe
+*.log
+
+# Dependencies
+node_modules/
+package-lock.json
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+~*
