feat: not action thoroughly, add checkbok to translate and font-adjust and add more lang

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "auto-clone-translation",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Adobe Illustrator Auto Translation Extension",
   "scripts": {
     "build": "node scripts/build.js",
     "watch": "node scripts/watch.js"
   },
-  "keywords": ["adobe", "illustrator", "translation", "automation"],
+  "keywords": [
+    "adobe",
+    "illustrator",
+    "translation",
+    "automation"
+  ],
   "author": "",
   "license": "MIT",
   "engines": {
